FIX: label positioning on mobile forms

--- a/app/assets/stylesheets/mobile/discourse.scss
+++ b/app/assets/stylesheets/mobile/discourse.scss
@@ -56,6 +56,10 @@ body {
   .control-group {
     margin-bottom: 9px;
   }
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
 }
 
 blockquote {
